Swagger UI Tweaks / General Housekeeping
