# backend/middleware/swagger-output.json
@@ -1,18 +1,31 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Welcome to Cloud Engine Backend API",
+    "title": "Cloud Engine API",
     "version": "0.0.1",
     "description": "These API endpoint documentations are autogenerated from the backend code."
   },
   "servers": [
     {
-      "url": "http://localhost:3000"
+      "url": "http://localhost:3000/"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Authentication",
+      "description": "These endpoints are used for user authentication."
+    },
+    {
+      "name": "CDK",
+      "description": "These endpoints are in charge of interacting with AWS."
     }
   ],
   "paths": {
     "/api/cdk/": {
       "get": {
+        "tags": [
+          "CDK"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -23,6 +36,9 @@
     },
     "/api/register/": {
       "post": {
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -33,6 +49,9 @@
     },
     "/api/login/": {
       "post": {
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -63,6 +82,9 @@
     },
     "/api/auth/": {
       "get": {
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -79,6 +101,9 @@
     },
     "/api/logout/": {
       "get": {
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -95,6 +120,91 @@
     }
   },
   "components": {
+    "schemas": {
+      "Parents": {
+        "type": "object",
+        "properties": {
+          "father": {
+            "type": "string",
+            "example": "Simon Doe"
+          },
+          "mother": {
+            "type": "string",
+            "example": "Marie Doe"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Jhon Doe"
+          },
+          "age": {
+            "type": "number",
+            "example": 29
+          },
+          "parents": {
+            "$ref": "#/components/schemas/Parents"
+          },
+          "diplomas": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "school": {
+                  "type": "string",
+                  "example": "XYZ University"
+                },
+                "year": {
+                  "type": "number",
+                  "example": 2020
+                },
+                "completed": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "internship": {
+                  "type": "object",
+                  "properties": {
+                    "hours": {
+                      "type": "number",
+                      "example": 290
+                    },
+                    "location": {
+                      "type": "string",
+                      "example": "XYZ Company"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "AddUser": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Jhon Doe"
+          },
+          "age": {
+            "type": "number",
+            "example": 29
+          },
+          "about": {
+            "type": "string",
+            "example": ""
+          }
+        },
+        "required": [
+          "name",
+          "age"
+        ]
+      }
+    },
     "securitySchemes": {
       "bearerAuth": {
         "type": "http",
