# backend/routes/Auth/auth.js
@@ -5,6 +5,14 @@ const { User } = require('../../models/Account');
 
 
 router.get("/", auth, (req, res) => {
+    // #swagger.tags = ['Authentication']
+    // Sample Custom Parameter Definition 
+    // /*	#swagger.parameters['obj'] = {
+    //         in: 'body',
+    //         description: 'User information.',
+    //         required: true,
+    //         schema: { $ref: "#/definitions/AddUser" }
+    // } */
     res.status(200).json({
       _id: req.user._id,
       email: req.user.email,
